css/GENERAL.css
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
    list-style: none;
}

body {
    text-align: center;
    background-image: url("../IMG/BackgroundSquare.png");
    background-attachment: fixed;
    background-repeat: no-repeat;
    background-size: contain;
    background-color: black;
    background-position: center;
    font-family: "Arial", Courier, monospace;
    color: white;
    height: 100vh;
}

h1 {
    font-size: 3rem;
    background-color: rgb(50, 50, 50);
    max-width: 90%;
    margin: 12vh auto .2%;
    border: blue 2px solid;
}

a {
     color: cyan;
}

a:visited {
    color: lightblue;
}

h2 {
    font-size: 2rem;

    border: blue 2px solid;

    max-width: 90vw;
    margin: .5% auto 1%;
    background-color: rgb(35, 35, 35);
}

li {
    padding: 1vh 0;
}

button {
    color: black;
}

.text-box {
    background-color: rgb(37, 37, 37);
    border: 2px solid blue;
    width: fit-content;
    margin: auto auto 2%;
    padding: 3%;
    text-align: start;
}

/*
****************************************************************
FORMS
****************************************************************
*/
form {
    background-color: rgb(63, 63, 63);
    border: 2px solid blue;
    width: 90vw;
    margin: auto auto 2%;
    padding: 2%;
}

.input-list {
    outline: none;
}

input, select, .input-style-button {
    font-size: 1rem;
    min-width: 100%;
    padding: 1% 2%;
    margin: 1% 0;
    display: inline-block;
    border: 1px solid #ccc;
    border-radius: 20px;
    box-sizing: border-box;
    color: black;
}

input[type= "submit"], .input-style-button {
    min-width: 80vw;
    font-size: 1.5rem;
    margin: auto;
    cursor: pointer;
    background-color: rgb(255, 255, 255);
    height: fit-content;
}

input[type= "submit"]:hover, .input-style-button:hover {
    background-color: rgb(220, 220, 220);
}

option {
    color: black;
}

label {
    float: left;
}

.important {
    color: rgb(255, 43, 43);
    font-weight: bold;
}

.good {
    color: greenyellow;
}

.text-block, #welcome {
    width: 90vw;
    margin: auto auto 2%;
    background-color: rgb(19, 19, 19);
    line-height: 3vh;
    border: 2px solid blue;
}

.text-normal {
    text-align: left;
    padding: 3%;
}

#welcome {
    line-height: 4vw;
}

/*
****************************************************************
Switch List
****************************************************************
*/

.switch-list-button {
    aspect-ratio: 1/1;
    --width: 10%;
    width: var(--width);
    position: absolute;
    /*top: calc(50% - var(--height) / 2);*/
    background-color: white;
}


/*
****************************************************************
INPUT
****************************************************************
*/

#list-input {
    background-color: rgb(63, 63, 63);
    display: grid;
    grid-template-columns: 1fr;
    position: absolute;
    top: 0;
    overflow: scroll;
    border: 1px solid yellow;
}

#list-input::-webkit-scrollbar {
    display: none;
}

input[type="list"]:hover {
    cursor: pointer;
}

#list-input .list-input-item:nth-child(odd) {
    background-color: rgba(255, 255, 255, 0.1);
}

#list-input .list-input-item:nth-child(odd):hover {
    background-color: rgba(255, 255, 255, 0.3);
}

#list-input .list-input-item:nth-child(even):hover {
    background-color: rgba(255, 255, 255, 0.2);
}

#list-input .list-input-item {
    background-color: transparent;
    border: none;
    border-radius: 0;
    margin: 0;
    color: white;
    cursor: pointer;
}

/*
****************************************************************
RESERVATION PAGE
****************************************************************
*/

#booking-table {
    background-color: rgb(25, 25, 25);
    border: 2px solid blue;
    margin: auto;
    min-width: 90vw;
}

#booking-table * * {
    border: 1px solid white;
    width: 20%;
}

#booking-table th {
    background-color: rgb(29, 29, 29);
}

#booking-table td:nth-child(even) {
    background-color: rgb(96, 96, 96);
}

#booking-table td:nth-child(odd) {
    background-color: rgb(78, 78, 78);
}

#clear-reservations {
    font-size: 1rem;
    height: 8vh;
    color: red;
    font-weight: bold;
    margin-top: 1vh;
}


.trans-blue-bg {
    background-color: rgba(53, 174, 255, 0.3);
    font-weight: bold;
}

.trans-green-bg {
    background-color: rgba(36, 255, 47, 0.3);
    font-weight: bold;
}

.txt-b-yellow {
    font-weight: bold;
    color: rgb(255, 208, 0) !important;
}

.line-yellow {
    background-color: rgb(255, 208, 0);
    height: .2%;
    width: auto;
    margin-top: 6%;
}

/*
****************************************************************
NAVIGATION
****************************************************************
*/
.nav-link {
    color: white !important;
    text-decoration: none;
    font-weight: bold;
    text-transform: uppercase;
}

.nav-item, .activeNav {
    padding: 0 .5vw;
}

.nav-item:hover, .activeNav  {
    border: 2px solid rgb(0, 255, 247);
    padding: 0 calc(.5vw - 2px);
}

.activeNav:hover {
    border-color: rgb(0, 202, 195);
}

.nav {
    width: 100vw;
    height: 10vh;
    margin: 0 auto;
    background-color: rgb(5, 0, 57);
    list-style: none;
    display: flex;
    flex-direction: row;
    flex-wrap: nowrap;

    /*align along main axis (flex-direction)*/
    justify-content: space-around;

    /*align along cross axis*/
    align-content: center;
    align-items: center;
    
    /*make it stay, even when you scroll down*/
    position: fixed;
    top: 0;
    z-index: 200;

    box-shadow: 0 0 1vh .1vh rgb(128, 128, 128);
}

/*
****************************************************************
DROPDOWN
****************************************************************
*/
.dropdown {
    position: relative;
    display: inline-block;
}

.dropdown-content {
    display: none;
    position: absolute;
    background-color: black;
    min-width: 15vw;
    box-shadow: 0 1vw 2vw 0 rgba(255, 255, 255, 0.2);
    z-index: 1;
    list-style: none;
    border: 1px solid lime;
}

.dropdown:hover .dropdown-content {
    display: block;
}

.dropdown-item {
    width: 100%;
}

.dropdown-link {
    color: white !important;
    text-decoration: none;
    font-weight: bold;
    text-transform: uppercase;
    width: 100%;
    padding: 1vh .1vw;
}

.dropdown-item-selected {
    color: rgb(68, 68, 115) !important;
}

.dropdown-item-selected:hover .dropdown-link {
    color: rgb(0, 0, 133) !important;
}

.dropdown-item:hover .dropdown-link, .dropdown-item-selected .dropdown-link {
    color: rgb(59, 59, 217) !important;
}

.dropdown-item-selected:hover {
    background-color: rgb(233, 233, 233);
}

.dropdown-item:hover, .dropdown-item-selected {
    background-color: white;
}

@media (max-width: 770px) {
    * {
        font-size:14px;
    }
}

@media (max-width: 481px) {
    * {
        font-size: 8px;
    }
}

/*****************************************************************************************************************
******************************************************************************************************************
Loading Screen
*****************************************************************************************************************
*****************************************************************************************************************/
#loading-screen {
    width: 100%;
    height: 100%;
    background-color: black;
    background-image: url("../IMG/BackgroundSquare.png");
    background-size: contain;
    background-repeat: no-repeat;
    background-position: center;
    z-index: 100;
    position: absolute;
    top: 0;
    animation: loading-fadeout 2s ease-in .3s forwards;
    animation-play-state: paused;
}

@keyframes loading-fadeout {
    0% {
        opacity: 1;
    }

    100% {
        opacity: 0;
    }
}

